@@ -15,19 +15,20 @@ Features
 - Make paused databases available
 - Run a schedule
 - Send a message to clients
-- Start a server process
-- Restart a server process
-- Stop a server process
+- Start a server process (for FileMaker Server)
+- Restart a server process (for FileMaker Server)
+- Stop a server process (for FileMaker Server)
 - Retrieve server or CWP configuration settings
 - Change server or CWP configuration settings
 - List plug-ins (for FileMaker Server 19.2.1 or later)
 - Manage SSL certificates (for FileMaker Server 19.2.1 or later)
 - Move databases out of hosted folder (for FileMaker Server 19.3.1 or later)
 - View and change the setting for sharing streaming URLs (for FileMaker Server 19.3.2 or later)
+- View the server parallel backup setting (for FileMaker Server 19.5.1 or later)
 
 Supported Servers
 -----
-- Claris FileMaker Server 19 (19.0, 19.1, 19.2, 19.3, 19.4)
+- Claris FileMaker Server 19 (19.1, 19.2, 19.3, 19.4, 19.5)
 
 Usage
 -----
@@ -47,7 +48,7 @@ Note: Handling schedule ID 1 is not supported for FileMaker Server.
 
 System Requirements
 -----
-- Linux version   : Ubuntu 18.04 LTS or CentOS Linux 7
+- Linux version   : Ubuntu 18.04 LTS, Ubuntu 20.04 LTS or CentOS Linux 7
 - macOS version   : macOS Catalina 10.15.7 or later (tested on macOS Monterey 12)
 - Windows version : Windows 10 Version 21H1 or later (tested on Windows 11)
 
